<resources>
    <string name="app_name">Mvp</string>

    <string name="mainTop_title">AVideo</string>
    <string name="menu">选单</string>
    <string name="home">首页</string>
    <string name="like">收藏</string>
    <string name="search">搜索</string>
    <string name="ProblemsAndProposals">问题与建议</string>
    <string name="setting">设定</string>
    <string name="ShapeFriend">分享我的暗夜伙伴</string>
</resources>