<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:src="@android:color/darker_gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="6dp"
        android:text="@string/menu"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:src="@android:color/darker_gray" />

    <com.example.mvp_androidx.ui.widget.ImageTextView
        android:id="@+id/left_home"
        android:text="@string/home"
        app:drawable="@drawable/home"
        style="@style/mainLeft_imagetextview"
        app:drawableHeight="18dp"
        app:drawableWidth="18dp"
        app:position="1"/>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:src="@android:color/darker_gray" />

    <com.example.mvp_androidx.ui.widget.ImageTextView
        android:id="@+id/left_like"
        android:text="@string/like"
        app:drawable="@drawable/like"
        style="@style/mainLeft_imagetextview"
        app:drawableHeight="18dp"
        app:drawableWidth="18dp"
        app:position="1" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:src="@android:color/darker_gray" />

    <com.example.mvp_androidx.ui.widget.ImageTextView
        android:id="@+id/left_search"
        android:text="@string/search"
        app:drawable="@drawable/search_tab"
        style="@style/mainLeft_imagetextview"
        app:drawableHeight="18dp"
        app:drawableWidth="18dp"
        app:position="1"/>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:src="@android:color/darker_gray" />

    <com.example.mvp_androidx.ui.widget.ImageTextView
        android:id="@+id/left_suggest"
        app:drawable="@drawable/ding"
        android:text="@string/ProblemsAndProposals"
        style="@style/mainLeft_imagetextview"
        app:drawableHeight="18dp"
        app:drawableWidth="18dp"
        app:position="1" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="2dp"
        android:src="@android:color/darker_gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="6dp"
        android:text="@string/setting"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:src="@android:color/darker_gray" />

    <com.example.mvp_androidx.ui.widget.ImageTextView
        android:id="@+id/left_setting"
        app:drawable="@drawable/setting"
        android:text="@string/setting"
        style="@style/mainLeft_imagetextview"
        app:drawableHeight="18dp"
        app:drawableWidth="18dp"
        app:position="1"  />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray" />


    <Button
        android:id="@+id/left_shape"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="26dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/left_button_shape"
        android:gravity="center"
        android:text="@string/ShapeFriend"
        android:textColor="@android:color/background_dark"
        android:textSize="15sp" />
</merge>